--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -6,6 +6,14 @@ gem 'rails', '4.0.0.rc2'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3'
 
+# Use Slim for template
+gem 'slim'
+
+# Use SCSS for stylesheets
+gem 'sass-rails', '~> 4.0.0.rc2'
+gem 'bootstrap-sass'
+gem 'bootstrap-google-sass'
+
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
 
@@ -17,10 +25,6 @@ gem 'coffee-rails', '~> 4.0.0'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
-
-# use LESS for stylesheet
-gem 'less-rails'
-gem 'therubyracer'
 
 # Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
 gem 'turbolinks'
