--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -25,8 +25,10 @@ gem 'coffee-rails', '~> 4.0.0'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
+gem 'jquery-ui-rails'
 # Use Angular as the Javascript MVC library
 gem "angular-rails"
+gem 'angular-ui-rails'
 
 # Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
 gem 'turbolinks'
