--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -36,6 +36,9 @@ gem 'turbolinks'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem 'jbuilder', '~> 1.2'
 
+# calendar view helper
+gem 'later_dude'
+
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
   gem 'sdoc', require: false
@@ -57,5 +60,6 @@ group :development do
   gem 'binding_of_caller'
   # 更好的控制台
   gem 'pry-rails'
+  gem 'quiet_assets'
 end
 
